--- a/package-inspector/build.gradle
+++ b/package-inspector/build.gradle
@@ -1,9 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
+
+    compileOptions {
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
+        // Sets Java compatibility to Java 8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.microsoft.shatestapp"
         minSdkVersion 19
         targetSdkVersion rootProject.ext.targetSdkVersion
@@ -20,5 +30,8 @@ android {
 }
 
 dependencies {
+    //Java 8 - Desugaring
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
+
     implementation "androidx.appcompat:appcompat:$rootProject.ext.appCompatVersion"
 }
